# minidrone

./: .gitignore  .gitmodules  LICENSE  README.md  box_ui.py  cam_imu.rviz  i2c_pb.py  i2c_pb_python.py  install.sh  minidrone.proto  minidrone_pb2.py  requirements.txt  robot_localisation_config_notes  test_time_synch.py  useful_cmds.md  useful_cmds.txt
Arduino/thermistor/: thermistor.ino
Motor_control/: data_dump.py  i2c_out.py  i2c_out_ctypes.py
Motor_control/Arduino/: Arduino.ino
backend/: server.py
box_republisher/: BoxRosify.py  README.md  box_ui.py  cam_imu.rviz  requirements.txt  run_box_republisher.py  test_box.py
box_sensor_raw/: box_sensor_raw.ino
clustering_2d_brake/: package.xml  setup.cfg  setup.py
clustering_2d_brake/clustering_2d_brake/: cloud_reader.py  cloud_to_2d.py  cloud_tools.py  cluster_2d.py  scan_to_cloud.py
clustering_2d_brake/launch/: laser_scan_launch.py
comms/: README.md  package.xml
comms/launch/: comms.launch
control/: CMakeLists.txt  README.md  package.xml
control/include/joystick_twist/: joystick_twist.h
control/launch/: dualshock.launch  emergency_brake.launch  manual_control.launch
control/src/: PWMController.py  control.py  joystick_twist.cpp  joystick_twist_node.cpp
control/src/test/: test_motor_control.py
control_ws/log/: latest_build
control_ws/src/control_ros2/: CMakeLists.txt  package.xml
control_ws/src/control_ros2/src/: PWMController.py  control.py  test_motor_control.py
docker/: Dockerfile.cpu  Dockerfile.gpu  Dockerfile.jetson  README.md  run.sh  tmux-start.sh  tmux_instructions.md
emergency_brake/launch/: adv_emergency_brake.launch  donuts.launch  emergency_brake.launch
emergency_brake/src/: adv_emergency_brake.cpp  donuts.cpp  emergency_brake.cpp
encoder_reader/encoder_and_pid/: encoder_and_pid.ino
follow_the_leader/: CMakeLists.txt  follow_the_leader.py  package.xml
follow_the_leader/launch/: detectnet.ros1.launch  follow_the_leader.launch
follow_the_leader/src/: follow_the_leader.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  Scene.js
glob_planner/: CMakeLists.txt  package.xml
glob_planner/glob_planner/: Polygon.py  RRT.py  og_example.py
glob_planner/scripts/: path_creator_node.py
i2c/: minidrone.proto
i2c/Arduino/: Arduino.ino
i2c_sensor_raw_/: i2c_sensor_raw_.ino
imitation_learning/: CMakeLists.txt  README.md  package.xml
imitation_learning/launch/: carla.launch  imitation_learning.launch  jetson.launch
imitation_learning/src/: fake_cv_bridge.py  imitation_learning.py  imitation_network.py  train.py
lidar_occupancy/: package.xml  setup.cfg  setup.py
lidar_occupancy/lidar_occupancy/: lidar_occupancy.py  naive_bresenham.py  pcl2_serialization.py  true_bresenham.py
log/: latest_build
mcav_rosdoc/: CMakeLists.txt  package.xml
mcav_rosdoc/mcav_rosdoc/: node_doc.py
md_lane_detection/: CMakeLists.txt  package.xml  setup.cfg  setup.py
md_lane_detection/launch/: lane_following.launch.xml
md_lane_detection/md_lane_detection/: camera_cut_node.py  follow_node.py  kitti_ros_publisher.py  lane_detector_yolo_node.py  letterbox.py  sense_node.py  transformation_node.py  warp_perspective.py  warp_perspective_node.py  world_projection_node.py
md_lane_detection/scripts/: camera_cut_node.py  follow_node.py  lane_detector_yolo_node.py  sense_node.py  transformation_node.py  warp_perspective_node.py  world_projection_node.py
mini_tools/: CMakeLists.txt  package.xml
mini_tools/launch/: carla_ego_vehicle.launch  carla_example_ego_vehicle.launch  carla_ros_bridge_with_example_ego_vehicle.launch  mini_ui.launch  mini_ui_cams.launch  mini_ui_sim.launch
mini_tools/msg/: BoolStamped.msg
mini_tools/src/: README.md  config.yaml  config_mini.yaml  config_orig.yaml  config_sim.yaml  extractor.py  gps.py  record.py  ui.py  utils.py
mini_ui/: CMakeLists.txt  package.xml
mini_ui/launch/: mini_ui.launch  mini_ui_cams.launch
mini_ui/src/: config.yaml  extractor.py  gps.py  record.py  ui.py
minidrone_bringup/: package.xml  setup.cfg  setup.py
minidrone_bringup/launch/: milestone1.launch.py  minidrone_launch.py
minidrone_control/: CMakeLists.txt  package.xml
minidrone_control/minidrone_control/: control_tools.py
minidrone_control/scripts/: pinion_control.py  twist_to_control.py  twist_to_pwm.py
minidrone_gazebo/: CMakeLists.txt  package.xml
minidrone_gazebo/launch/: grassy_circuit.launch.py
minidrone_gazebo/worlds/: grassy_circuit.world
motor_enc_interface/: package.xml  setup.cfg  setup.py
motor_enc_interface/motor_enc_interface/: encoder_reader.py
my_turtlebot/: CMakeLists.txt  package.xml
my_turtlebot/launch/: myturtlebot3_house.launch.py
my_turtlebot/models/turtlebot3_waffle/: model.sdf  model_old.sdf
my_turtlebot/scripts/: debug_subscriber.py
opencv_cam/: opencv_cam_params.yaml
piksi_gps/: package.xml  setup.py
piksi_gps/piksi_gps/: piksi_gps_pub.py  simple-example-gps.py
python_web_app/backend/: minidrone.proto  minidrone_pb2.py  sensor_app.py
robot_localisation_pkg/: CMakeLists.txt  frames.gv  package.xml
robot_localisation_pkg/config/: ekf.yaml  ekf_gps.yaml  ekf_odom.yaml  ekf_pos.yaml
robot_localisation_pkg/launch/: robot_localisation_launch.py
robot_localisation_pkg/log/: latest_build
rrt_planner/: package.xml  setup.py
rrt_planner/rrt_planner/: Og_manager.py  path_creator_node.py
src/comms/: CMakeLists.txt  setup.py
src/comms/nodes/: comms_to_ros
src/comms/src/comms/: ImuExtract.py
src/control/: package.xml
src/emergency_brake/: CMakeLists.txt  package.xml
src/i2c_comms/: CMakeLists.txt  package.xml
src/log/: latest_build
src/piksi_gps/: setup.cfg
unguided_planning/: CMakeLists.txt  package.xml
unguided_planning/scripts/: waypoint_gen.py
unguided_planning/unguided_planning/: space_tools.py  trajectory_tools.py
web_app/: README.md
web_app/backend/: server.py
web_app/frontend/: package-lock.json  package.json
yolopv2_example/: Untitled.ipynb  yolo_evaluation .ipynb  yolopv2_eval_example.py
yolopv2_example/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
(+37 files in other folders)
