<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_enc_interface</name>
  <version>0.0.0</version>
  <description>Provides an interface for controlling mindrone motors and reading data from them</description>
  <maintainer email="s.a.baaset.moslih@gmail.com">mcav</maintainer>
  <license>TODO: License declaration</license>
    

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>RPi</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
