<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_turtlebot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="davidfhelmerson@gmail.com">david</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>octomap_server2</depend>
  <depend>turtlebot3_teleop</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
