<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control_ros2</name>
  <version>0.0.0</version>
  <description>Using I2C to communicate sensor information to Jetson</description>
  <maintainer email="monashcav@gmail.com">mcav</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <!-- TBC if build_depend required -->
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend_export>rclpy</build_depend_export>
  <build_depend_export>std_msgs</build_depend_export> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
